--- a/posts/02.md
+++ b/posts/02.md
@@ -93,6 +93,9 @@ Article
 JSX 還可以用 `{}` 來傳遞 JavaScript Expression 作為 Props，或是在 Tag 中間嵌入 JavaScript Expression：
 
 ```jsx
+const styles = {
+	button: 'button_1ad5e',
+};
 const textOnButton = '按我';
 <button
 	className={styles.button}
