--- a/posts/05.md
+++ b/posts/05.md
@@ -14,7 +14,7 @@ React Native 有非常優秀的 [Getting Started](https://facebook.github.io/rea
 
 雖然貴，但是沒有 iOS 的 React Native 有如半殘，會有點可惜。
 
-當然，另一個重點是你必須要有 XCode (可以在 App Store 安裝)：
+當然，另一個重點是你必須要有 Xcode (可以在 App Store 安裝)：
 
 ![xcode](https://s3.mzstatic.com/us/r30/Purple62/v4/47/71/c8/4771c849-7694-45d0-6a76-d6b080798a26/icon128-2x.png)
 
