--- a/posts/07.md
+++ b/posts/07.md
@@ -6,7 +6,7 @@ Day 07：Style & Layout
 
 ## CSS in JS
 
-Facebook Infrastucture Team 的知名開發者[(Christopher Chedeau) vjeux](https://github.com/vjeux) 在 [CSS in JS](https://speakerdeck.com/vjeux/react-css-in-js) 的投影片裡面指出了 CSS 的七大問題：
+Facebook Infrastucture Team 的知名開發者 [(Christopher Chedeau) vjeux](https://github.com/vjeux) 在 [CSS in JS](https://speakerdeck.com/vjeux/react-css-in-js) 的投影片裡面指出了 CSS 的七大問題：
 - **全域命名空間**：例如 bootstrap 就有超過 600 個 class
 - **依賴關係**：CSS 本身無法模組化，並宣告依賴關係
 - **不必要的程式碼**：已經用不到的 CSS 常常殘留在程式碼
@@ -53,7 +53,7 @@ const styles = {
 
 為了支援 `::after`、`:hover`、`@media (max-width: 480px)` 等等 CSS 既有的寫法，這些 Library 需要用到很多的 Workaround，[這部 Inline Styles 的影片](https://www.youtube.com/watch?v=ERB1TJBn32c)有講到一些相關的主題。以筆者的觀點來看，最好是選一種不會被綁死的做法比較保險。
 
-不過至少在做 Component 放 npm 時，筆者會想選用 Inline Style，因為不能假設使用者會使用 Webpack、有一樣的 Webpack 設定檔，也不能假設使用者會使用 Sass、Less、Stylus、PostCss 任何一種，用 Inline Style 是唯一一個 Zero Configuration 的方式。
+不過至少在做 Component 放 npm 時，筆者會想選用 Inline Style，因為不能假設使用者會使用 Webpack、有一樣的 Webpack 設定檔，也不能假設使用者會使用 Sass、Less、Stylus、PostCSS 任何一種，用 Inline Style 是唯一一個 Zero Configuration 的方式。
 
 另一個值得一提的是 [CSS Modules](https://github.com/css-modules/css-modules)，它被內建在 Webpack 的 `css-loader` 裡面，可以在 class 名稱加上一個 hash 來避免全域的碰撞：
 
