--- a/posts/07.md
+++ b/posts/07.md
@@ -229,7 +229,7 @@ const styles = StyleSheet.create({
 
 ![flex-grow](https://css-tricks.com/wp-content/uploads/2014/05/flex-grow.svg)
 
-- **flex-shrink**：如果 Container 有空間不夠時，分配給 Item 壓縮的比例。
+- **flex-shrink**：如果 Container 空間不夠時，分配給 Item 壓縮的比例。
 
 - **flex-basis**：設定不該被拿進去分配的基本長度。`flex-basis: 0;` 會把全部拿去分配，`flex-basis: auto;` 會扣掉他原本的長度再拿去分配。
 
